@startuml Architecture Applicative

title Diagramme de Classes — Architecture Applicative\n(Facade · Services · Repositories · Managers)

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #F8F9FA
    BorderColor #495057
    HeaderBackgroundColor #343A40
    HeaderFontColor #FFFFFF
    ArrowColor #495057
}
skinparam packageStyle rectangle
skinparam shadowing false
skinparam noteBackgroundColor #FFF3CD
skinparam noteBorderColor #FFC107

' ═══════════════════════════════════════════
'  PATTERN FACADE
' ═══════════════════════════════════════════
package "facades <<Facade>>" #E8F5E9 {

    class ManagementFacade {
        - registrationService : RegistrationService
        - paymentService : PaymentService
        - notificationService : NotificationService
        --
        + ManagementFacade()
        + completeRegistration(\n  parent : Parent,\n  child : Child,\n  timeSlot : TimeSlot,\n  payment : Payment) : void
    }
}

note top of ManagementFacade
  Orchestre en 3 étapes :
  1. Inscription (RegistrationService)
  2. Paiement (PaymentService)
  3. Notification (NotificationService)
end note

' ═══════════════════════════════════════════
'  SERVICES
' ═══════════════════════════════════════════
package services {

    class AuthService {
        + login(email : String, password : String) : User
        + logout() : void
    }

    class RegistrationService {
        + registerChild(\n  child : Child,\n  timeSlot : TimeSlot,\n  payment : Payment,\n  parentId : int) : Registration
    }

    class PaymentService {
        + processPayment(payment : Payment) : double
    }

    class NotificationService {
        - observers : List<Observer>
        --
        + addObserver(observer : Observer) : void
        + removeObserver(observer : Observer) : void
        + notifyObservers(message : String) : void
        + notifyParent(parentId : int, message : String) : void
        + clearObservers() : void
    }

    class TimeSlotService {
        + getAvailableSlots() : List<TimeSlot>
        + getSlotById(id : int) : TimeSlot
    }

    class ChildService {
        + getChildrenByParent(parentId : int) : List<Child>
        + addChild(child : Child) : void
        + removeChild(childId : int) : void
    }
}

' ═══════════════════════════════════════════
'  REPOSITORIES
' ═══════════════════════════════════════════
package repositories {

    abstract class BaseRepository<T> {
        # filePath : String
        --
        + {abstract} findAll() : List<T>
        + {abstract} findById(id : int) : T
        + {abstract} save(entity : T) : void
        + {abstract} update(entity : T) : void
        + {abstract} delete(id : int) : void
        + generateNextId() : int
    }

    class ParentRepository {
        + findAll() : List<Parent>
        + findById(id : int) : Parent
        + findByEmail(email : String) : Parent
        + save(parent : Parent) : void
        + update(parent : Parent) : void
        + delete(id : int) : void
    }

    class AdministratorRepository {
        + findAll() : List<Administrator>
        + findById(id : int) : Administrator
        + findByEmail(email : String) : Administrator
        + save(admin : Administrator) : void
        + update(admin : Administrator) : void
        + delete(id : int) : void
    }

    class ChildRepository {
        + findAll() : List<Child>
        + findById(id : int) : Child
        + findByParentId(parentId : int) : List<Child>
        + save(child : Child) : void
        + update(child : Child) : void
        + delete(id : int) : void
    }

    class TimeSlotRepository {
        + findAll() : List<TimeSlot>
        + findById(id : int) : TimeSlot
        + findAvailable() : List<TimeSlot>
        + save(slot : TimeSlot) : void
        + update(slot : TimeSlot) : void
        + delete(id : int) : void
    }

    class RegistrationRepository {
        + findAll() : List<Registration>
        + findById(id : int) : Registration
        + findByChildId(childId : int) : List<Registration>
        + findByParentId(parentId : int) : List<Registration>
        + save(registration : Registration) : void
        + update(registration : Registration) : void
        + delete(id : int) : void
    }

    class PaymentRepository {
        + findAll() : List<Payment>
        + findById(id : int) : Payment
        + save(payment : Payment) : void
        + update(payment : Payment) : void
        + delete(id : int) : void
    }

    class NotificationRepository {
        + findAll() : List<Notification>
        + findByParentId(parentId : int) : List<Notification>
        + save(notification : Notification) : void
        + generateNextId() : int
    }

    BaseRepository <|-- ParentRepository
    BaseRepository <|-- AdministratorRepository
    BaseRepository <|-- ChildRepository
    BaseRepository <|-- TimeSlotRepository
    BaseRepository <|-- RegistrationRepository
    BaseRepository <|-- PaymentRepository
    BaseRepository <|-- NotificationRepository
}

' ═══════════════════════════════════════════
'  MANAGER DE SESSION
' ═══════════════════════════════════════════
package managers {

    class SessionManager {
        - {static} instance : SessionManager
        - currentUser : User
        --
        - SessionManager()
        + {static} getInstance() : SessionManager
        + login(user : User) : void
        + logout() : void
        + getCurrentUser() : User
        + isLoggedIn() : boolean
    }
}

' ─────────────────────────────────────────
'  RELATIONS FACADE → SERVICES
' ─────────────────────────────────────────
ManagementFacade --> RegistrationService  : utilise
ManagementFacade --> PaymentService       : utilise
ManagementFacade --> NotificationService  : utilise

' ─────────────────────────────────────────
'  RELATIONS SERVICES → REPOSITORIES
' ─────────────────────────────────────────
AuthService         --> ParentRepository
AuthService         --> AdministratorRepository
RegistrationService --> RegistrationRepository
RegistrationService --> TimeSlotRepository
PaymentService      --> PaymentRepository
NotificationService --> NotificationRepository
TimeSlotService     --> TimeSlotRepository
ChildService        --> ChildRepository

' ─────────────────────────────────────────
'  RELATIONS AVEC LE SINGLETON
' ─────────────────────────────────────────
BaseRepository ..> "singleton.AppConfig" : <<uses>>\ngetFilePath()

@enduml
